--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><a href="product.html" class="header__list--item">Product</a></li>
         <li><a href="shop.html" class="header__list--item">Shop</a></li>
         <li><a href="access.html" class="header__list--item">Access</a></li>
-        <li><a href="contact.html" class="header__list--item">Contact</a></li>
+        <li><a href="index.html" class="header__list--item">Contact</a></li>
       </ul>
       <!--ハンバーガーメニュー-->
       <div class="SP__header__inquiry">
@@ -159,7 +159,7 @@
         <li><a href="product.html" class="footer__list--item">Product</a></li>
         <li><a href="shop.html" class="footer__list--item">Shop</a></li>
         <li><a href="access.html" class="footer__list--item">Access</a></li>
-        <li><a href="contact.html" class="footer__list--item">Contact</a></li>
+        <li><a href="index.html" class="footer__list--item">Contact</a></li>
       </ul>
     </div><!--/footer__wrapper-->
     <div class="footer__sns-wrapper">
